# mini-dust3r

./: .gitignore  .pixi.sh  README.md  pixi.toml  pyproject.toml  torch_mapping.json
mini_dust3r/: inference.py  model.py  rerun_log_utils.py
mini_dust3r/api/: __init__.py  inference.py
mini_dust3r/cloud_opt/: base_opt.py  init_im_poses.py  optimizer.py
mini_dust3r/gradio_ui/: dust3r_ui.py
mini_dust3r/utils/: image.py
tools/: app.py  gradio_app.py  rerun_demo.py  upload_to_hf.py
